--- a/HW4/HW4/MainWindow.xaml
+++ b/HW4/HW4/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HW4"
         mc:Ignorable="d"
-        Title="Phone Shop" Height="450" Width="1000" Loaded="Window_Loaded">
+        Title="Phone Shop" Height="720" Width="1280" Loaded="Window_Loaded">
     <Window.Resources>
         <local:RelativeToAbsoluteConveter x:Key="absoluteConverter"/>
         <local:PlainDollarToVNDConverter x:Key="USDtoVNDConverter"/>
@@ -70,7 +70,15 @@
             <Button x:Name="DeleteButton" Content="Delete" Width="80" Height="40" Click="DeleteButton_Click"/>
         </StackPanel>
         <StackPanel Grid.Row="1" Grid.Column="0">
-            <ComboBox x:Name="ManufacturerFilterComboBox" Height="25" SelectionChanged="ManufacturerFilterComboBox_SelectionChanged" />
+            <ComboBox x:Name="ManufacturerFilterComboBox" Height="25" SelectionChanged="ManufacturerFilterComboBox_SelectionChanged">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock>
+                            <Run Text="{Binding ID}"/> - <Run Text="{Binding Name}"/>
+                        </TextBlock>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
             <Button x:Name="RefreshFilterButton" Content="Refresh" Height="30" Width="60" Margin="0,5,0,0" Click="RefreshFilterButton_Click"/>
         </StackPanel>
         
