--- a/HW4/HW4/MainWindow.xaml
+++ b/HW4/HW4/MainWindow.xaml
@@ -1,12 +1,120 @@
-﻿<Window x:Class="HW4.MainWindow"
+﻿<Fluent:RibbonWindow x:Class="HW4.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:Fluent="clr-namespace:Fluent;assembly=Fluent"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HW4"
         mc:Ignorable="d"
-        Title="Phone Shop" Height="720" Width="1280" Loaded="Window_Loaded">
-    <Window.Resources>
+        Title="Phone Shop" Height="720" Width="1280" Loaded="RibbonWindow_Loaded">
+    <DockPanel LastChildFill="True">
+        <Fluent:Ribbon DockPanel.Dock="Top" x:Name="ribbon">
+            <Fluent:Ribbon.Menu>
+                <Fluent:Backstage Header="Menu">
+                    <Fluent:BackstageTabControl>
+                        <Fluent:BackstageTabItem Header="Item1"/>
+                    </Fluent:BackstageTabControl>
+                </Fluent:Backstage>
+            </Fluent:Ribbon.Menu>
+
+            <Fluent:RibbonTabItem Header="Dashboard">
+                <Fluent:RibbonGroupBox Header="Import">
+                    <Fluent:Button Header="Excel" >
+                        <Fluent:Button.LargeIcon>
+                            <Image Source="./Images/excel.png" RenderOptions.BitmapScalingMode="HighQuality"/>
+                        </Fluent:Button.LargeIcon>
+                    </Fluent:Button>
+                </Fluent:RibbonGroupBox>
+                <Fluent:RibbonGroupBox Header="Category">
+                    <Fluent:Button Header="Add" >
+                        <Fluent:Button.LargeIcon>
+                            <Image Source="Images/plus.png" RenderOptions.BitmapScalingMode="HighQuality"/>
+                        </Fluent:Button.LargeIcon>
+                    </Fluent:Button>
+                    <Fluent:Button Header="Delete" >
+                        <Fluent:Button.LargeIcon>
+                            <Image Source="Images/delete.png" RenderOptions.BitmapScalingMode="HighQuality"/>
+                        </Fluent:Button.LargeIcon>
+                    </Fluent:Button>
+                </Fluent:RibbonGroupBox>
+                <Fluent:RibbonGroupBox Header="Product">
+                    <Fluent:Button Header="Add">
+                        <Fluent:Button.LargeIcon>
+                            <Image Source="Images/plus_blue.png" RenderOptions.BitmapScalingMode="HighQuality"/>
+                        </Fluent:Button.LargeIcon>
+                    </Fluent:Button>
+                    <Fluent:Button Header="Update" >
+                        <Fluent:Button.LargeIcon>
+                            <Image Source="Images/pencil.png" RenderOptions.BitmapScalingMode="HighQuality"/>
+                        </Fluent:Button.LargeIcon>
+                    </Fluent:Button>
+                    <Fluent:Button Header="Delete" >
+                        <Fluent:Button.LargeIcon>
+                            <Image Source="Images/garbage.png"  RenderOptions.BitmapScalingMode="HighQuality"/>
+                        </Fluent:Button.LargeIcon>
+                    </Fluent:Button>
+                </Fluent:RibbonGroupBox>
+            </Fluent:RibbonTabItem>
+            <Fluent:RibbonTabItem Header="Products">
+                <Fluent:RibbonGroupBox Header="Import">
+                    <Fluent:Button Header="Excel" >
+                        <Fluent:Button.LargeIcon>
+                            <Image Source="./Images/excel.png" RenderOptions.BitmapScalingMode="HighQuality"/>
+                        </Fluent:Button.LargeIcon>
+                    </Fluent:Button>
+                </Fluent:RibbonGroupBox>
+                <Fluent:RibbonGroupBox Header="Category">
+                    <Fluent:Button Header="Add" >
+                        <Fluent:Button.LargeIcon>
+                            <Image Source="Images/plus.png" RenderOptions.BitmapScalingMode="HighQuality"/>
+                        </Fluent:Button.LargeIcon>
+                    </Fluent:Button>
+                    <Fluent:Button Header="Delete" >
+                        <Fluent:Button.LargeIcon>
+                            <Image Source="Images/delete.png" RenderOptions.BitmapScalingMode="HighQuality"/>
+                        </Fluent:Button.LargeIcon>
+                    </Fluent:Button>
+                </Fluent:RibbonGroupBox>
+                <Fluent:RibbonGroupBox Header="Product">
+                    <Fluent:Button Header="Add">
+                        <Fluent:Button.LargeIcon>
+                            <Image Source="Images/plus_blue.png" RenderOptions.BitmapScalingMode="HighQuality"/>
+                        </Fluent:Button.LargeIcon>
+                    </Fluent:Button>
+                    <Fluent:Button Header="Update">
+                        <Fluent:Button.LargeIcon>
+                            <Image Source="Images/pencil.png" RenderOptions.BitmapScalingMode="HighQuality"/>
+                        </Fluent:Button.LargeIcon>
+                    </Fluent:Button>
+                    <Fluent:Button Header="Delete" >
+                        <Fluent:Button.LargeIcon>
+                            <Image Source="Images/garbage.png"  RenderOptions.BitmapScalingMode="HighQuality"/>
+                        </Fluent:Button.LargeIcon>
+                    </Fluent:Button>
+                </Fluent:RibbonGroupBox>
+            </Fluent:RibbonTabItem>
+            <Fluent:RibbonTabItem Header="Orders">
+                <Fluent:RibbonGroupBox>
+                </Fluent:RibbonGroupBox>
+            </Fluent:RibbonTabItem>
+        </Fluent:Ribbon>
+
+        <TabControl Name="tabs" BorderThickness="0"
+                SelectedIndex="{Binding ElementName=ribbon, Path=SelectedTabIndex}">
+            <TabControl.Resources>
+                <Style TargetType="TabItem">
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="TabItem">
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </TabControl.Resources>
+
+        </TabControl>
+    </DockPanel>
+    <!--<Window.Resources>
         <local:RelativeToAbsoluteConveter x:Key="absoluteConverter"/>
         <local:PlainDollarToVNDConverter x:Key="USDtoVNDConverter"/>
     </Window.Resources>
@@ -100,5 +208,5 @@
         <StatusBar Height="30" Grid.Row="4" Grid.ColumnSpan="6">
             
         </StatusBar>
-    </Grid>
-</Window>
+    </Grid>-->
+</Fluent:RibbonWindow>
