re-organize the code to match the 3-layer model

--- a/HW4/HW4/MainWindow.xaml
+++ b/HW4/HW4/MainWindow.xaml
@@ -26,7 +26,7 @@
                     </Fluent:Button>
                 </Fluent:RibbonGroupBox>
                 <Fluent:RibbonGroupBox Header="Category">
-                    <Fluent:Button Header="Add" >
+                    <Fluent:Button Header="Add" x:Name="AddManufacturerRibbonButton" Click="AddManufacturerRibbonButton_Click">
                         <Fluent:Button.LargeIcon>
                             <Image Source="Images/plus.png" RenderOptions.BitmapScalingMode="HighQuality"/>
                         </Fluent:Button.LargeIcon>
