Re-organizing the folder structurer and complete manufacturer tab functionalities

--- a/HW4/HW4/MainWindow.xaml
+++ b/HW4/HW4/MainWindow.xaml
@@ -25,18 +25,6 @@
                         </Fluent:Button.LargeIcon>
                     </Fluent:Button>
                 </Fluent:RibbonGroupBox>
-                <Fluent:RibbonGroupBox Header="Category">
-                    <Fluent:Button Header="Add" x:Name="AddManufacturerRibbonButton" Click="AddManufacturerRibbonButton_Click">
-                        <Fluent:Button.LargeIcon>
-                            <Image Source="Images/plus.png" RenderOptions.BitmapScalingMode="HighQuality"/>
-                        </Fluent:Button.LargeIcon>
-                    </Fluent:Button>
-                    <Fluent:Button Header="Delete" >
-                        <Fluent:Button.LargeIcon>
-                            <Image Source="Images/delete.png" RenderOptions.BitmapScalingMode="HighQuality"/>
-                        </Fluent:Button.LargeIcon>
-                    </Fluent:Button>
-                </Fluent:RibbonGroupBox>
                 <Fluent:RibbonGroupBox Header="Product">
                     <Fluent:Button Header="Add">
                         <Fluent:Button.LargeIcon>
@@ -83,12 +71,17 @@
             </Fluent:RibbonTabItem>
             <Fluent:RibbonTabItem Header="Manufacturer">
                 <Fluent:RibbonGroupBox Header="Manufacturer">
-                    <Fluent:Button Header="Add" >
+                    <Fluent:Button Header="Add" x:Name="AddManufacturerRibbonButton" Click="AddManufacturerRibbonButton_Click">
                         <Fluent:Button.LargeIcon>
                             <Image Source="Images/plus.png" RenderOptions.BitmapScalingMode="HighQuality"/>
                         </Fluent:Button.LargeIcon>
                     </Fluent:Button>
-                    <Fluent:Button Header="Delete" >
+                    <Fluent:Button Header="Update"  x:Name="UpdateManufacturerRibbonButton" Click="UpdateManufacturerRibbonButton_Click">
+                        <Fluent:Button.LargeIcon>
+                            <Image Source="Images/pencil.png" RenderOptions.BitmapScalingMode="HighQuality"/>
+                        </Fluent:Button.LargeIcon>
+                    </Fluent:Button>
+                    <Fluent:Button Header="Delete" x:Name="DeleteManufacturerRibbonButton" Click="DeleteManufacturerRibbonButton_Click">
                         <Fluent:Button.LargeIcon>
                             <Image Source="Images/delete.png" RenderOptions.BitmapScalingMode="HighQuality"/>
                         </Fluent:Button.LargeIcon>
