--- a/HW4/HW4/UI/Orders/PhoneOrder.xaml
+++ b/HW4/HW4/UI/Orders/PhoneOrder.xaml
@@ -4,12 +4,13 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HW4"
+        xmlns:converter="clr-namespace:HW4.UI.Converters"
         mc:Ignorable="d"
         Height="450" Width="800">
     <UserControl.Resources>
-        <local:RelativeToAbsoluteConveter x:Key="absoluteConverter"/>
-        <local:PlainDollarToVNDConverter x:Key="USDtoVNDConverter"/>
-        <local:StatusColorConverter x:Key="StatusColorConverter"/>
+        <converter:RelativeToAbsoluteConveter x:Key="absoluteConverter"/>
+        <converter:PlainDollarToVNDConverter x:Key="USDtoVNDConverter"/>
+        <converter:StatusColorConverter x:Key="StatusColorConverter"/>
     </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
