--- a/HW4/HW4/UI/Products/PhoneInfoUserControl.xaml
+++ b/HW4/HW4/UI/Products/PhoneInfoUserControl.xaml
@@ -3,12 +3,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:HW4" d:DataContext="{d:DesignInstance Type=local:PHONE}"
+             xmlns:local="clr-namespace:HW4" 
+             xmlns:converter="clr-namespace:HW4.UI.Converters"
+             d:DataContext="{d:DesignInstance Type=local:PHONE}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
-        <local:RelativeToAbsoluteConveter x:Key="absoluteConverter"/>
-        <local:PlainDollarToVNDConverter x:Key="USDtoVNDConverter"/>
+        <converter:RelativeToAbsoluteConveter x:Key="absoluteConverter"/>
+        <converter:PlainDollarToVNDConverter x:Key="USDtoVNDConverter"/>
     </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
