Add update promotion

--- a/HW4/HW4/MainWindow.xaml
+++ b/HW4/HW4/MainWindow.xaml
@@ -97,18 +97,25 @@
                 </Fluent:RibbonGroupBox>
             </Fluent:RibbonTabItem>
             <Fluent:RibbonTabItem Header="Promotions">
-                <Fluent:RibbonGroupBox>
-                    <Fluent:Button Header="Add" >
+                <Fluent:RibbonGroupBox Header="Utilities">
+                    <Fluent:Button Header="Add" x:Name="AddPromotionRibbonButton" Click="AddPromotionRibbonButton_Click">
                         <Fluent:Button.LargeIcon>
                             <Image Source="Images/plus.png" RenderOptions.BitmapScalingMode="HighQuality"/>
                         </Fluent:Button.LargeIcon>
                     </Fluent:Button>
-                    <Fluent:Button Header="Delete" >
+                    <Fluent:Button Header="Update" x:Name="UpdatePromotionRibbonButton" Click="UpdatePromotionRibbonButton_Click">
+                        <Fluent:Button.LargeIcon>
+                            <Image Source="Images/pencil.png" RenderOptions.BitmapScalingMode="HighQuality"/>
+                        </Fluent:Button.LargeIcon>
+                    </Fluent:Button>
+                    <Fluent:Button Header="Delete" x:Name="DeletePromotionRibbonButton" Click="DeletePromotionRibbonButton_Click">
                         <Fluent:Button.LargeIcon>
                             <Image Source="Images/delete.png" RenderOptions.BitmapScalingMode="HighQuality"/>
                         </Fluent:Button.LargeIcon>
                     </Fluent:Button>
-                    <Fluent:Button Header="See Available Promos">
+                </Fluent:RibbonGroupBox>
+                <Fluent:RibbonGroupBox Header="View">
+                    <Fluent:Button Header="See Available Promos" x:Name="AvailablePromosRibbonButton" Click="AvailablePromosRibbonButton_Click">
                         <Fluent:Button.LargeIcon>
                             <Image Source="Images/search.png" RenderOptions.BitmapScalingMode="HighQuality"/>
                         </Fluent:Button.LargeIcon>
