--- a/HW4/HW4/UI/Products/ProductManagementScreen.xaml
+++ b/HW4/HW4/UI/Products/ProductManagementScreen.xaml
@@ -89,7 +89,7 @@
             <TextBox x:Name="searchTextBox" Height="25" />
             <Button x:Name="searchButton" Content="Search" Width="50" Height="30" Margin="0,5,0,0" Click="searchButton_Click"/>
 
-            <Label Content="Price :" Margin="0,20,0,0"/>
+            <Label Content="Price($US):" Margin="0,20,0,0"/>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <StackPanel Orientation="Vertical" HorizontalAlignment="Center">
                     <Label Content="Min" HorizontalAlignment="Center" FontSize="9"/>
